# aoc24

./: .gitignore  CMakeLists.txt
day1/: main.cpp
day2/: main.cpp
day3/: main.cpp
include/: file.hpp  utils.hpp
